@@ -244,10 +244,10 @@ exit_label: ; \
 /* push the contents of the object on the mark stack.  Current points	*/
 /* to the bginning of the object.  We rely on the fact that the 	*/
 /* preceding header calculation will succeed for a pointer past the 	*/
-/* forst page of an object, only if it is in fact a valid pointer	*/
+/* first page of an object, only if it is in fact a valid pointer	*/
 /* to the object.  Thus we can omit the otherwise necessary tests	*/
-/* here.  Note in particular tha the "displ" value is the displacement	*/
-/* from the beggining of the heap block, which may itself be in the	*/
+/* here.  Note in particular that the "displ" value is the displacement	*/
+/* from the beginning of the heap block, which may itself be in the	*/
 /* interior of a large object.						*/
 #ifdef MARK_BIT_PER_GRANULE
 # define PUSH_CONTENTS_HDR(current, mark_stack_top, mark_stack_limit, \
